--- a/style.css
+++ b/style.css
@@ -1,22 +1,30 @@
+.canty {
+  background: rgb(173, 167, 85);
+  position: relative;
+  width: 100%;
+  height: 800px;
+}
+
+.canty_name {
+  width: 400px;
+  height: 42vh;
+  background: rgb(13, 13, 12);
+  box-sizing: border-box;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: 0;
+}
+
 .container {
-    margin: 50px;
-    text-align: center;
-    justify-content: center;
-    text-align: center;
-    color: rgb(13, 13, 17);
-    padding: 44px;
-  }
-
-  .canty {
-    background: rgb(173, 167, 85);
-  }
-
-  #submit-btn {
-  width: 100px;
-  height: 30px;
-  font-size: 22px;
-  color: rgb(24, 25, 26);
-  background: rgb(211, 60, 191);
+  text-align: center;
+  justify-content: center;
+  text-align: center;
+  color: rgb(13, 13, 17);
+  padding: 44px;
 }
 
 #city {
@@ -24,16 +32,43 @@
   text-align: center;
   font-size: 33px;
 }
-
-#input-btn { 
-  width: 26%;
+input {
+  width: 100%;
   height: 26%;
-  font-size: 22px;
+  font-size: 20px;
+  padding: 5px;
+  background: #ffff;
+  outline: none;
+  border: 1px solid black;
+  border-radius: 7px;
+}
+
+h3 {
+  color: #ffff;
+}
+
+h4 {
+  color: #ffff;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  font-size: 20px;
+  color: rgb(24, 25, 26);
+
+  margin-top: 10px;
+  border: 1px solid rgb(25, 24, 24);
+  border-radius: 5px;
+}
+
+#submit-btn {
+  padding: 5px 5px 26px;
   color: #000;
-  background: rgb(163, 39, 140);
+  background: #ffff;
 }
 
 #temp {
-  color: #000;
+  color: #ffff;
   font-size: 23px;
 }
