--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .canty {
-  background: rgb(173, 167, 85);
   position: relative;
   width: 100%;
   height: 800px;
+  background: rgb(168, 221, 222);
 }
 
 .canty_name {
@@ -41,6 +41,10 @@ input {
   outline: none;
   border: 1px solid black;
   border-radius: 7px;
+}
+
+h1 {
+  color: aliceblue;
 }
 
 h3 {
